# skejul-ai

./: .gitignore  README.md  create_timetable_image.py  langgraph.json  main.py  models.py  output_mermaid.py  prompts.py  pyproject.toml  requirements.txt  skejul-ai.py  utils.py
